--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Raraph84",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "minecraft-ping-js": "^1.0.2",
     "mysql": "^2.18.1",
     "p-limit": "^3.1.0",
