--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "minecraft-ping-js": "^1.0.2",
-    "mysql": "^2.18.1",
+    "mysql2": "^3.9.6",
     "p-limit": "^3.1.0",
     "raraph84-lib": "^2.17.1",
     "ws": "^8.16.0"
