--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "minecraft-ping-js": "^1.0.2",
-    "mysql2": "^3.9.6",
+    "mysql2": "^3.9.7",
+    "net-ping": "^1.2.4",
+    "node-gyp": "^10.1.0",
     "p-limit": "^3.1.0",
     "raraph84-lib": "^2.17.1",
-    "ws": "^8.16.0"
+    "sqlite3": "^5.1.7",
+    "ws": "^8.17.0"
   }
 }
