--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dotenv": "^16.4.7",
     "minecraft-ping-js": "^1.0.2",
     "mysql2": "^3.12.0",
+    "net-ping": "github:Raraph84/node-net-ping-nanos",
     "raraph84-lib": "^2.19.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
