--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "mysql2": "^3.14.0",
     "net-ping": "github:Raraph84/node-net-ping-nanos",
     "raraph84-lib": "^2.19.0",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7",
     "ws": "^8.18.1"
   }
 }
