Remove the config.json file and use .env instead

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
+DATABASE_HOST=DATABASE_HOST
+DATABASE_USER=DATABASE_USER
 DATABASE_PASSWORD=DATABASE_PASSWORD
+DATABASE_NAME=DATABASE_NAME
+CHECKER_ID=CHECKER_ID
 ALERT_DISCORD_WEBHOOK_URL=ALERT_DISCORD_WEBHOOK_URL
